adding movie collection ( by Anelisa Ferreira)
