# routes/index.js
@@ -4,6 +4,8 @@ router.use('/', require('./swagger'));
 router.get('/', (req, res) => { res. send('Welcome');});
 
 // PASTE RIGHT HERE YOUR ROUTES
+//Movies route
+router.use('/movies', require('./movies'));
 
 //TV shows route
 router.use('/tvshows', require('./tvshows'));
